--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                   <i class="fa fa-code" style="font-size: 25px;color: #89e692;"></i>&nbsp; F1 Fixture </a>
               </h4>
               <h4 style="font-size: 16px;font-family: Alef;text-align: center;">JS,HTML,CSS</h4>
-              <p style="font-family: Alef;text-align: justify;">&nbsp;This project is shows fixture of F1 current season and all champions since 1950. Written in JavaScript and used <a href="https://documenter.getpostman.com/view/11586746/SztEa7bL" style="color: rgb(109,153,167);text-decoration: none;font-weight: bold;font-style: italic;" target="_blank">F1 API</a>. Hosted in <a href="https://f1.sedanurnur.repl.co/" style="color: rgb(109,153,167);text-decoration: none;font-weight: bold;font-style: italic;" target="_blank">replit.com</a>. </p>
+              <p style="font-family: Alef;text-align: justify;">&nbsp;This project shows fixture of F1 current season and all champions since 1950. Written in JavaScript and used <a href="https://documenter.getpostman.com/view/11586746/SztEa7bL" style="color: rgb(109,153,167);text-decoration: none;font-weight: bold;font-style: italic;" target="_blank">F1 API</a>. Hosted in <a href="https://f1.sedanurnur.repl.co/" style="color: rgb(109,153,167);text-decoration: none;font-weight: bold;font-style: italic;" target="_blank">replit.com</a>. </p>
             </div>
           </div>
         </div>
