Revise personal details and GitHub links

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <h4>
             <i class="fa fa-info" style="font-size: 25px;color: #89e692;"></i>&nbsp; &nbsp;About Me
           </h4>
-          <p style="font-family: Alef;text-align: justify;">&nbsp; Hey, It's Seda! I am a hardworking, ambitious and creative person. I have no work experience, yet. I am currently looking for an opportunity to internship. <br>
+          <p style="font-family: Alef;text-align: justify;">&nbsp; Hey, It's Seda! I am a hardworking, ambitious and creative person. I am currently working @ Tiga Healthcare Tech.<br>
           </p>
         </div>
         <div class="col-md-4" style="padding-top: 85px;text-align: center;">
@@ -44,8 +44,8 @@
           </h4>
           <p class="text-start" style="font-family: Alef;text-align: justify;font-size: 16px;margin: -1px;">&nbsp; •&nbsp;BSc in Computer Engineering <br>
           </p>
-          <p class="text-start" style="font-family: Alef;text-align: justify;font-size: 15px;font-style: italic;margin: 1px;">&nbsp; &nbsp; Gazi University <br>&nbsp; &nbsp; 2020 - Present </p>
-          <p class="text-start" style="font-family: Alef;text-align: justify;font-size: 14px;font-style: italic;">-&gt; Society: Cinema Society - As Social Media Director</p>
+          <p class="text-start" style="font-family: Alef;text-align: justify;font-size: 15px;font-style: italic;margin: 1px;">&nbsp; &nbsp; Gazi University <br>&nbsp; &nbsp; 2020 - 2024 | 3.29 </p>
+          <p class="text-start" style="font-family: Alef;text-align: justify;font-size: 14px;font-style: italic;">-&gt; Society: Cinema Society - As Social Media Director (2023) </p>
         </div>
         <div class="col-md-4" style="padding-top: 85px;text-align: center;">
           <h4>
@@ -62,7 +62,7 @@
       <div class="row mb-5">
         <div class="col text-center mx-auto">
           <h2 style="color: rgb(137,230,146);">Projects</h2>
-          <p class="w-lg-50" style="font-family: Alef;text-align: center;">You can look up my some projects from here. Also you can look up my&nbsp; <a href="https://github.com/imtribute12" style="color: rgb(109,153,167);text-decoration: none;font-weight: bold;font-style: italic;" target="_blank">GitHub</a>&nbsp;for all of my projects. </p>
+          <p class="w-lg-50" style="font-family: Alef;text-align: center;">You can look up my some projects from here. Also you can look up my&nbsp; <a href="https://github.com/sedataskan" style="color: rgb(109,153,167);text-decoration: none;font-weight: bold;font-style: italic;" target="_blank">GitHub</a>&nbsp;for all of my projects. </p>
         </div>
       </div>
       <div class="row gy-4 row-cols-1 row-cols-md-2">
@@ -70,7 +70,7 @@
           <div class="d-flex flex-column flex-lg-row">
             <div class="py-4 py-lg-0 px-lg-4">
               <h4>
-                <a href="https://github.com/imtribute12/F1" style="color: rgb(255,255,255);text-decoration: none;" target="_blank">
+                <a href="https://github.com/sedataskan/F1" style="color: rgb(255,255,255);text-decoration: none;" target="_blank">
                   <i class="fa fa-code" style="font-size: 25px;color: #89e692;"></i>&nbsp; F1 Fixture </a>
               </h4>
               <h4 style="font-size: 16px;font-family: Alef;text-align: center;">JS,HTML,CSS</h4>
@@ -94,7 +94,7 @@
           <div class="d-flex flex-column flex-lg-row">
             <div class="py-4 py-lg-0 px-lg-4">
               <h4>
-                <a href="https://github.com/imtribute12/Hospital" style="color: rgb(255,255,255);text-decoration: none;" target="_blank">
+                <a href="https://github.com/sedataskan/Hospital" style="color: rgb(255,255,255);text-decoration: none;" target="_blank">
                   <i class="fa fa-code" style="font-size: 25px;color: #516f84;"></i>&nbsp; Hospital Appointment System </a>
               </h4>
               <h4></h4>
@@ -126,7 +126,7 @@
               </a>
             </li>
             <li class="list-inline-item me-4">
-              <a href="mailto:snur.taskan@gmail.com" target="_blank">
+              <a href="mailto:sedan.taskan@gmail.com" target="_blank">
                 <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-mailbox2 text-light" style="font-size: 40px;">
                   <path d="M9 8.5h2.793l.853.854A.5.5 0 0 0 13 9.5h1a.5.5 0 0 0 .5-.5V8a.5.5 0 0 0-.5-.5H9v1z"></path>
                   <path d="M12 3H4a4 4 0 0 0-4 4v6a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1V7a4 4 0 0 0-4-4zM8 7a3.99 3.99 0 0 0-1.354-3H12a3 3 0 0 1 3 3v6H8V7zm-3.415.157C4.42 7.087 4.218 7 4 7c-.218 0-.42.086-.585.157C3.164 7.264 3 7.334 3 7a1 1 0 0 1 2 0c0 .334-.164.264-.415.157z"></path>
@@ -134,14 +134,14 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://github.com/imtribute12" target="_blank">
+              <a href="https://github.com/sedataskan" target="_blank">
                 <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-github text-light" style="font-size: 40px;">
                   <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"></path>
                 </svg>
               </a>
             </li>
           </ul>
-          <p class="text-muted mb-0" style="font-family: Alef;padding-top: 16px;">Copyright © 2022 snt</p>
+          <p class="text-muted mb-0" style="font-family: Alef;padding-top: 16px;">Copyright © 2025 snt</p>
         </div>
       </footer>
       <style>
